docs/book/samples/ch03/backwards_check.out
error[formatting]: overloads of `fact` appear most-specific first: literal, then concrete type, then generic
  --> backwards_check.kso:4:4
   4 | fn fact 0
          ^
