docs/book/samples/ch03/backwards_check.kso
fn fact n
  n * fact (n - 1)

fn fact 0
  1
